...
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="skip_the_service">SkipTheService</string>
    <string name="no_account_register">No account? Register</string>
    <string name="todo">TODO</string>
    <string name="nothing_here_yet">Nothing Here Yet!</string>

    <string name="Welcome">Welcome to our app!</string>

    <!-- Strings used for service browse page -->
...
    <string name="Category4">Health Services</string>
    <string name="Category5">Pool Maintenance</string>
    <string name="Category6">Lawn Care</string>
    <string name="Category7">Gardening</string>
    <string name="Category8">Plumbing</string>

    <string name="create_business_account">Create Business Account</string>
    <string name="create_user_account">Create User Account</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="register_user_account">Register User Account</string>
    <string name="register">Register</string>

    <string name ="logout">Logout</string>

    <!-- Strings used for account pages -->
    <string name="view_profile">View Profile</string>
    <string name="profile">Profile</string>
    <string name="done">DONE</string>
    <string name="edit">EDIT</string>
    <string name="change_password">Click to Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter Old Password</string>
...
    <string name="example_street">Example Street</string>
    <string name="bus_profile">Business Profile</string>
    <string name="back_button">back</string>
    <string name="submitProfile">submit</string>
    <string name="examplemart_info_com">submit</string>
    <string name="example_mart">submit</string>
    <string name="add_service">New Service</string>


    <string name="favorite">My favorite</string>
    <string name="skiptheservice">SkipTheService</string>
    <string name="check_review">Check Review</string>
    <string name="favorite_it">Favorite it</string>
...
    <string name="report">Report</string>

    <!-- Strings used for new service description page -->
    <string name="book">Book Now</string>
    <string name="reason_for_report">Reason for report</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="ex_mart">Example Mart</string>

    <!-- Strings used for new service page -->
    <string name="add_service_header">Add New Service</string>
    <string name="name_placeholder">Business Name</string>
    <string name="location_placeholder">City Name</string>
    <string name="description_placeholder">My business description…</string>
    <string name="price_placeholder">$50.00</string>
    <string name="register_service">Register Service</string>
    <string name="required_fields">Fields marked with * are required</string>
    <string name="asterisk">*</string>
    <string-array name="categories">
        <item>Cleaning</item>
        <item>Snow Removal</item>
        <item>Mechanic</item>
...
        <item>Lawn Care</item>
        <item>Gardening</item>
        <item>Plumbing</item>
    </string-array>
    <!-- Strings used for edit service page -->
    <string name="edit_service_header">Edit Service Details</string>
    <string name="register_edit">Submit Changes</string>
    <string name="delete_service">Delete Service</string>
    <string name="cancel">Cancel</string>


</resources>
