...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
...
            android:textColor="#303030"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
...
            android:onClick="registerOnClick"
            android:text="Register"
            android:textColor="@color/black"
            app:backgroundTint="@color/design_default_color_error" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="242dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
...
            android:layout_marginBottom="300dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="242dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
...
            android:autofillHints=""
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/postalAddress"
            android:layout_width="242dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
...
            android:autofillHints=""
            android:ems="10"
            android:hint="Address, Postal code"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/newBusinessName"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
...
