...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
...
                android:text="@string/change_pass"
                android:textColor="@color/white"
                android:background="@color/primaryRed"
                app:backgroundTint="@color/primaryRed" />

            <Button
                android:id="@+id/newService"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/no_service_text"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="39dp"
...
                android:layout_marginTop="76dp"
                android:contentDescription="@string/todo"
                android:visibility="visible"
                android:src="@drawable/person_icon" />

            <ListView
                android:id="@+id/services"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/service_title"
                android:layout_marginTop="6dp" >
            </ListView>

...
